# starship-space

./: .gitignore  AGENTS.md  CHANGELOG.md  CODEX_FLAG_B1_MARKET_SYNC_POLISH.md  CODEX_FLAG_M0_LOBBY_POLISH.md  CODEX_FLAG_MILESTONE2_GAMEOVER_RECAP.md  Cargo.toml  GAME_JOURNEY.md  IMPLEMENTATION_SPEC.md  Plan.md  SUMMARY.md  TEAMWORK_MODES.md
src/: main.rs
src/game/: audio.rs  bullet.rs  effects.rs  enemy.rs  item.rs  market.rs  mod.rs  renderer.rs  state.rs
src/server/: messages.rs  mod.rs  ws_handler.rs
static/: index.html
