[package]
name = "game001"
version = "0.1.0"
edition = "2021"

[dependencies]
macroquad        = { version = "0.4", features = ["audio"] }
tokio            = { version = "1", features = ["full"] }
axum             = { version = "0.7", features = ["ws"] }
tower-http       = { version = "0.5", features = ["fs"] }
futures-util     = "=0.3.31"
serde            = { version = "1", features = ["derive"] }
serde_json       = "1"
local-ip-address = "0.6"
qrcode           = "0.13"

[profile.dev]
opt-level = 1

[dev-dependencies]
serde_json         = "1"
pretty_assertions  = "1"
